--- a/css/index.css
+++ b/css/index.css
@@ -74,19 +74,20 @@ p {
 header {
     width: 100%;
     background: white;
+    margin-bottom: 20px;
 }
 
-header nav {
+.topHeader {
     width: 60%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 2%;
+    padding: 20px 20px 20px 0 ;
     font-size: 14px;
 }
 
 header nav a {
-    color: white;
+    color: black;
     text-decoration: none;
 }
 
