corrected colors of boxes

--- a/css/index.css
+++ b/css/index.css
@@ -145,11 +145,11 @@ header nav a {
 }
 
 #box-4 {
-    background-color: crimson;
+    background-color: coral;
 }
 
 #box-5 {
-    background-color: teal;
+    background-color: crimson;
 }
 
 #box-6 {
