--- a/css/index.css
+++ b/css/index.css
@@ -74,21 +74,26 @@ p {
 header {
     width: 100%;
     background: white;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
 
 .topHeader {
-    width: 60%;
+    width: 100%;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 20px 20px 0 ;
-    font-size: 14px;
+    padding: 20px 20px 20px 0 ;       
+}
+
+header nav {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
 }
 
 header nav a {
     color: black;
     text-decoration: none;
+    font-size: 14px;
+    align-self: flex-end
 }
 
 .top-content {
