--- a/css/index.css
+++ b/css/index.css
@@ -104,12 +104,6 @@ header nav a {
     border-bottom: 1px dashed black;
 }
 
-.top-content-about {
-    padding: 20px;
-    margin-bottom: 25px;
-    border-bottom: 1px dotted black;
-}
-
 .top-content .text-container {
     width: 48%;
     padding: 0 1%;
@@ -214,4 +208,24 @@ footer nav {
 footer nav a {
     color: white;
     text-decoration: none;
+}
+
+
+.about-content {
+    padding: 20px;
+    margin-bottom: 25px;
+    border-bottom: 1px dotted black;
+}
+
+.about-mid-content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin-bottom: 20px;
+}
+
+.about-mid-content .about-text-container {
+    width: 48%;
+    padding: 20px;
+    border-bottom: 1px dotted black; 
 }
