--- a/css/index.css
+++ b/css/index.css
@@ -229,3 +229,8 @@ footer nav a {
     padding: 20px;
     border-bottom: 1px dotted black; 
 }
+
+.about-bottom-content {
+    padding: 20px;
+    margin-bottom: 25px;
+}
