--- a/css/index.css
+++ b/css/index.css
@@ -74,13 +74,14 @@ p {
 header {
     width: 100%;
     background: white;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 .topHeader {
     width: 100%;
     display: flex;
-    padding: 20px 20px 20px 0 ;       
+    padding: 20px 20px 20px 0 ;
+    margin-bottom: 20px       
 }
 
 header nav {
@@ -210,9 +211,13 @@ footer nav a {
     text-decoration: none;
 }
 
+.about-page {
+    width: 800px;
+    margin-left: 100px;
+}
 
 .about-content {
-    padding: 20px;
+    padding: 10px;
     margin-bottom: 25px;
     border-bottom: 1px dotted black;
 }
